# mcp-hoogle

./: Readme.md  default.nix  mcp-hoogle.cabal  shell.nix
.github/workflows/: ci.yaml
app/: Main.hs
nix/: hpkgs.nix
src/: McpHoogle.hs
src/McpHoogle/: Format.hs  Tools.hs
test/: Test.hs
