cabal-version:      3.0

name:           mcp-hoogle
version:        0.1.0
synopsis:       MCP server exposing Hoogle search over local project dependencies
homepage:       https://github.com/jappeace/mcp-hoogle#readme
bug-reports:    https://github.com/jappeace/mcp-hoogle/issues
author:         Jappie Klooster
maintainer:     hi@jappie.me
copyright:      2025 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE
extra-doc-files:
    Changelog.md

source-repository head
  type: git
  location: https://github.com/jappeace/mcp-hoogle

common common-options
  default-extensions:
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost
      TemplateHaskell

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields

  build-depends:
      base >=4.9.1.0 && <4.22.0

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      McpHoogle
      McpHoogle.Tools
      McpHoogle.Format
  hs-source-dirs:
      src
  build-depends:
      hoogle
    , mcp-server
    , text
    , directory

executable mcp-hoogle
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      mcp-hoogle
    , hoogle
    , process
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"
  hs-source-dirs:
      test
  build-depends:
      tasty
    , tasty-hunit
    , mcp-hoogle
    , hoogle
    , text
    , directory
    , temporary
